--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,8 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "dist/server.js",
-            "methods": ["GET", "POST","DELETE","PUT","PATCH"],
-            "headers": {
-                "Access-Control-Allow-Origin": "*"
-            }
+            "dest": "dist/server.js"
+            
         }
     ]
 }
