--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,11 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "dist/server.js"
-            
+            "dest": "dist/server.js",
+            "methods": ["GET", "POST","DELETE","PUT","PATCH"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
